<resources>
    <string name="app_name">HandphoneDetail</string>
    <string name="os">OS</string>
    <string name="os_version">OS Version</string>
    <string name="sim">SIM</string>
    <string name="cpu">CPU</string>
    <string name="kecepatan_cpu">Kecepatan CPU</string>
    <string name="storage">Storage</string>
    <string name="ram">RAM</string>
    <string name="ukuran">Ukuran Layar</string>
    <string name="external_storage">External Storage</string>
    <string name="battery">Battery</string>
</resources>
